--- a/language-translation/dlnd_language_translation.ipynb
+++ b/language-translation/dlnd_language_translation.ipynb
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -40,9 +42,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 227\n",
+      "Number of sentences: 137861\n",
+      "Average number of words in a sentence: 13.225277634719028\n",
+      "\n",
+      "English sentences 0 to 10:\n",
+      "new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "california is usually quiet during march , and it is usually hot in june .\n",
+      "the united states is sometimes mild during june , and it is cold in september .\n",
+      "your least liked fruit is the grape , but my least liked is the apple .\n",
+      "his favorite fruit is the orange , but my favorite is the grape .\n",
+      "paris is relaxing during december , but it is usually chilly in july .\n",
+      "new jersey is busy during spring , and it is never hot in march .\n",
+      "our least liked fruit is the lemon , but my least liked is the grape .\n",
+      "the united states is sometimes busy during january , and it is sometimes warm in november .\n",
+      "\n",
+      "French sentences 0 to 10:\n",
+      "new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n",
+      "california est généralement calme en mars , et il est généralement chaud en juin .\n",
+      "les états-unis est parfois légère en juin , et il fait froid en septembre .\n",
+      "votre moins aimé fruit est le raisin , mais mon moins aimé est la pomme .\n",
+      "son fruit préféré est l'orange , mais mon préféré est le raisin .\n",
+      "paris est relaxant en décembre , mais il est généralement froid en juillet .\n",
+      "new jersey est occupé au printemps , et il est jamais chaude en mars .\n",
+      "notre fruit est moins aimé le citron , mais mon moins aimé est le raisin .\n",
+      "les états-unis est parfois occupé en janvier , et il est parfois chaud en novembre .\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -84,9 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def text_to_ids(source_text, target_text, source_vocab_to_int, target_vocab_to_int):\n",
     "    \"\"\"\n",
@@ -96,10 +141,21 @@
     "    :param source_vocab_to_int: Dictionary to go from the source words to an id\n",
     "    :param target_vocab_to_int: Dictionary to go from the target words to an id\n",
     "    :return: A tuple of lists (source_id_text, target_id_text)\n",
-    "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
     "    \n",
-    "    return None, None\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### Get the lines from the source& target\n",
+    "    source_lines= source_text.split('\\n')\n",
+    "    #### Note the space before EOS \"word\".. all words are separated by space. \n",
+    "    target_lines= [line +' <EOS>' for line in target_text.split('\\n')]\n",
+    "    \n",
+    "    source_id_text = [ [ source_vocab_to_int[word] for word in line.split()] for line in source_lines]\n",
+    "    target_id_text = [ [target_vocab_to_int[word] for word in line.split()] for line in target_lines]\n",
+    "    \n",
+    "       \n",
+    "    \n",
+    "    return source_id_text,target_id_text\n",
+    " \n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -117,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -137,8 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -161,9 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adilr\\AppData\\Local\\Continuum\\Anaconda3\\envs\\dlnd_p4\\lib\\site-packages\\ipykernel_launcher.py:15: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -214,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
@@ -225,7 +309,17 @@
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None, None, None, None\n",
+    "    inputs=tf.placeholder(tf.float32,[None,None],name='input')\n",
+    "    \n",
+    "    targets= tf.placeholder(tf.float32,[None,None], name=\"targets\")\n",
+    "    lr= tf.placeholder(tf.float32,shape=[],name='learning_rate')\n",
+    "    keep_prob= tf.placeholder(tf.float32,[],name=\"keep_prob\")\n",
+    "    target_sequence_length= tf.placeholder(tf.float32,[None],name=\"target_sequence_length\")\n",
+    "    source_sequence_length= tf.placeholder(tf.float32,[None],name=\"source_sequence_length\")\n",
+    "    \n",
+    "    max_target_len= tf.reduce_max(target_sequence_length,name=\"max_target_len\")\n",
+    "    \n",
+    "    return inputs, targets, lr, keep_prob, target_sequence_length, max_target_len, source_sequence_length\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -244,9 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoder_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -256,8 +358,9 @@
     "    :param batch_size: Batch Size\n",
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    target_updated_batches = tf.strided_slice(target_data, [0, 0], [batch_size, -1], [1, 1])\n",
+    "    decoder_input = tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), target_updated_batches], 1)\n",
+    "    return decoder_input\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -278,11 +381,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "from imp import reload\n",
     "reload(tests)\n",
@@ -301,8 +412,17 @@
     "    :param encoding_embedding_size: embedding size of source data\n",
     "    :return: tuple (RNN output, RNN state)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    encoder_embedded_input=tf.contrib.layers.embed_sequence(rnn_inputs,source_vocab_size,encoding_embedding_size)\n",
+    "    \n",
+    "    def make_rnn_cell(rnn_size):\n",
+    "        encoder_cell=tf.contrib.rnn.LSTMCell(rnn_size,initializer=tf.random_uniform_initializer(-0.1,0.1))\n",
+    "        encoder_cell=tf.contrib.rnn.DropoutWrapper(encoder_cell,input_keep_prob=keep_prob,output_keep_prob=keep_prob)\n",
+    "        return encoder_cell\n",
+    "    \n",
+    "    encoder_cell = tf.contrib.rnn.MultiRNNCell([ make_rnn_cell(rnn_size) for _ in range(num_layers)])\n",
+    "    \n",
+    "    encoder_op,encoder_state= tf.nn.dynamic_rnn(encoder_cell,encoder_embedded_input,sequence_length=source_sequence_length,dtype=tf.float32)\n",
+    "    return encoder_op,encoder_state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -323,9 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def decoding_layer_train(encoder_state, dec_cell, dec_embed_input, \n",
@@ -342,8 +470,17 @@
     "    :param keep_prob: Dropout keep probability\n",
     "    :return: BasicDecoderOutput containing training logits and sample_id\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    ## Create Helper\n",
+    "    helper= tf.contrib.seq2seq.TrainingHelper(dec_embed_input,sequence_length=target_sequence_length)\n",
+    "    \n",
+    "    \n",
+    "    ## Create basic decoder\n",
+    "    decoder= tf.contrib.seq2seq.BasicDecoder(cell=dec_cell, helper=helper, initial_state= encoder_state,output_layer=output_layer)\n",
+    "    \n",
+    "    ## Dynamic decode\n",
+    "    dynamic_decoder_op,_= tf.contrib.seq2seq.dynamic_decode(decoder=decoder)\n",
+    "    \n",
+    "    return dynamic_decoder_op\n",
     "\n",
     "\n",
     "\n",
@@ -368,6 +505,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -420,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def decoding_layer(dec_input, encoder_state,\n",
@@ -469,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size,\n",
@@ -561,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -676,6 +820,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -772,7 +917,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -792,7 +939,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -822,7 +971,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
@@ -853,7 +1004,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
@@ -920,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
