--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -775,10 +775,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = None\n",
-    "z_dim = None\n",
-    "learning_rate = None\n",
-    "beta1 = None\n",
+    "batch_size = 32\n",
+    "z_dim = 100\n",
+    "learning_rate = 0.0001\n",
+    "beta1 = 0.3\n",
     "\n",
     "\n",
     "\"\"\"\n",
